infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts # Tells deployment to add pods with label app/posts
  template: #Where we specify the config of the pdds we want the deployment to create
    metadata:
      labels:
        app: posts #we want the pods to have a label app: posts
    spec: #configs of pod we are making
      containers: 
        - name: posts
          image: chelsejw/posts:0.0.2 # THe docker image
