infra/k8s/posts-srv.yaml
apiVersion: v1
kind: Service
metadata:
  name: posts-srv
spec:
  type: NodePort
  selector: # The pods you want to expose, corresponding to their label
    app: posts 
  ports:
    - name: posts 
      protocol: TCP
      port: 4000 # The NodePort service, which can direct traffic to another targetPort
      targetPort: 4000 # Ultimately where we want to send traffic to
